<resources>
    <string name="app_name">Welcome</string>
    <string name="welcome">Welcome to ToDo list</string>
    <string name="start">Start</string>
    <string name='you'>You</string>
    <string name="have_to_do">Today you have to do 0</string>
    <string name="completed">Today you completed 0</string>
    <string name="settings">Settings</string>
    <string name="what_day_today">Wednesday, 4 march</string>
    <string name="today_day">Today</string>
    <string name="task_name">Task</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_button_task">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="low_prior">Low priority</string>
    <string name="medium_prior">Medium priority</string>
    <string name="high_prior">High priority</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>